--- a/styles/argon-design-system-react.css
+++ b/styles/argon-design-system-react.css
@@ -4878,6 +4878,7 @@ input[type="button"].btn-block {
 }
 
 .navbar-toggler {
+	display: none;
 	padding: 0.25rem 0.75rem;
 	font-size: 1.25rem;
 	line-height: 1;
