--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,17 @@ body > div:first-child {
   align-items: center;
 }
 
+.collapse-brand .nav-title {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-collapse .navbar-nav .nav-link {
+    font-size: 1.1rem !important;
+    padding: 0.75rem 0 !important;
+  }
+}
+
 .navbar-main {
   display: flex !important;
   flex-wrap: wrap;
@@ -37,6 +48,7 @@ body > div:first-child {
 
 .navbar-toggler {
   order: 2;
+  display: block !important;
 }
 
 .navbar-collapse {
@@ -45,6 +57,10 @@ body > div:first-child {
 }
 
 @media (min-width: 992px) {
+  .navbar-toggler {
+    display: none !important;
+  }
+
   .navbar-expand-lg .navbar-collapse {
     display: flex !important;
     flex-wrap: nowrap;
