--- a/styles/argon-design-system-react.css
+++ b/styles/argon-design-system-react.css
@@ -33,10 +33,10 @@
 
 #backToTop {
 	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	width: 40px;
-	height: 40px;
+	bottom: 1.25rem;
+	right: 1.25rem;
+	width: 50px;
+	height: 50px;
 	cursor: pointer;
 	z-index: 1;
 }
